# shoe-store-api

./: .gitignore  README.md  pyproject.toml
app/: settings.py  urls.py
products/: admin.py  models.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_alter_category_parent.py
